--- a/index.html
+++ b/index.html
@@ -61,7 +61,9 @@
         </section>
         <section class="products"></section>
       </main>
-      <footer></footer>
+      <footer>
+        Đây là footer của Quyennvc1
+      </footer>
     </div>
   </body>
 </html>
